examples/errors/renewcommand.tex
\documentclass{article}
\begin{document}
\newcommand\textbf[1]{\textsl{#1}}
Wir definieren \textbf{fett} um.
\end{document}
